--- a/public/FrontEnd/partials/imagegallery.html
+++ b/public/FrontEnd/partials/imagegallery.html
@@ -1,42 +1,18 @@
 <!-- Image gallery view. Uses pluginmagnific. -->
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">TripAround</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="navbar">
-      <ul class="nav navbar-nav">
-      <li><a href="#dashboard">Dashboard</a></li>
-      <li><a href="#UploadImages">Upload Images</a></li>
-      <li><a href="#ViewImages">View Uploaded Images</a></li>
-      <li class="active"><a href="#imagegallery">Browse Image Gallery <span class="sr-only">(current)</span></a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-
-<h1 id="dashboard">Welcome, {{userid}}.</h1>
+<h1>(TripAround logo)</h1>
+<h3>Welcome, {{userid}}</h3>
 <div class="row steps">
   <div class="col-md-3 step step-past">
-    <a>1. Create or choose a map.</a>
+    <a href="#dashboard">1. Create or choose a map.</a>
   </div>
   <div class="col-md-3 step step-past">
-    <a>2. Upload pictures.</a>
+    <a href="#UploadImages">2. Upload pictures.</a>
   </div>
   <div class="col-md-3 step step-current">
     <a>3. Manage your gallery.</a>
   </div>
   <div class="col-md-3 step step-future">
-    <a>4. Edit your map.</a>
+    <a href="#ViewImages">4. Edit your map.</a>
   </div>
 </div>
 
