--- a/public/FrontEnd/partials/imageupload.html
+++ b/public/FrontEnd/partials/imageupload.html
@@ -1,48 +1,35 @@
 <!--Image Upload -->
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">TripAround</a>
-    </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="navbar">
-      <ul class="nav navbar-nav">
-      <li><a href="#dashboard">Dashboard</a></li>
-      <li class="active"><a href="#UploadImages">Upload Images <span class="sr-only">(current)</span></a></li>
-      <li><a href="#ViewImages">View Uploaded Images</a></li>
-      <li><a href="#imagegallery">Browse Image Gallery</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-
-<h1 id="dashboard">Welcome, {{userid}}.</h1>
+<h1>(TripAround logo)</h1>
+<h3>Welcome, {{userid}}</h3>
 <div class="row steps">
   <div class="col-md-3 step step-past">
-    <a>1. Create or choose a map.</a>
+    <a href="#dashboard">1. Create or choose a map.</a>
   </div>
   <div class="col-md-3 step step-current">
     <a>2. Upload pictures.</a>
   </div>
   <div class="col-md-3 step step-future">
-    <a>3. Manage your gallery.</a>
+    <a href="#imagegallery">3. Manage your gallery.</a>
   </div>
   <div class="col-md-3 step step-future">
-    <a>4. Edit your map.</a>
+    <a href="#ViewImages">4. Edit your map.</a>
+  </div>
+</div>
+<div class="row">
+  <div class="col-lg-12">
+    
+  </div>
+</div>
+<div class="row">
+  <div class="col-sm-12">
+    <p>Upload images to your <em>{{map}}</em> map. If the images have geo tags, they will be displayed on the map below. Don't forget to save the map before leaving this page!</p>
   </div>
 </div>
 <div class="row">
   <div class="col-sm-12">
     <form id="mapform">
-      <p id="maptext">You are uploading images to: <em>{{map}}</em>. <input type="submit" value="Save map" id="savemap" class="btn btn-success btn-sm"></p>
+      <p id="maptext"><input type="submit" value="Save map" id="savemap" class="btn btn-success btn-sm"></p>
     </form>
   </div>
 </div>
