--- a/public/FrontEnd/partials/imageupload.html
+++ b/public/FrontEnd/partials/imageupload.html
@@ -74,7 +74,7 @@
   <div id="googlemapcontainer">
     <div class="row">
       <div class="col-lg-12">
-        <div id="googleMap"style="height:380px;"></div>
+        <div id="googleMap"></div>
       </div>
     </div>
   </div>
