--- a/public/FrontEnd/partials/dashboard.html
+++ b/public/FrontEnd/partials/dashboard.html
@@ -54,7 +54,7 @@
 <div class="row">
   <div class="col-lg-12">
       <!--<a class="btn btn-primary" href="" id="viewbutt" ><i class="fa fa-map-o fa-lg" aria-hidden="true"></i> View saved maps </a>-->
-      <a class="btn btn-success" href="" id="savebutt" data-toggle="modal"><i class="fa fa-map-o fa-lg"></i><sup>&nbsp;<i class="fa fa-plus fa-lg"></i></sup>&nbsp;Create new map</a>
+      <a class="btn btn-success" href="" id="savebutt" data-toggle="modal"><i class="fa fa-map-o fa-lg"></i><!--<sup>&nbsp;<i class="fa fa-plus fa-lg"></i></sup>-->&nbsp;Create new map</a>
   </div>
 </div>
 <!-- User can create a new map -->
