--- a/public/FrontEnd/partials/map.html
+++ b/public/FrontEnd/partials/map.html
@@ -32,6 +32,21 @@
   </div>
 </div>
 
+<div class="row">
+  <div class="col-lg-12">
+    <div class="text-center" role="toolbar">
+      <div class="btn-group" role="group">
+        <button type="button" class="btn btn-primary" onclick="airplanehandler()"><i class="fa fa-plane" aria-hidden="true"></i> Airplane</button>
+        <button type="button" class="btn btn-primary" onclick="bushandler()"><i class="fa fa-bus" aria-hidden="true"></i> Bus</button>
+        <button type="button" class="btn btn-primary" onclick="trainhandler()"><i class="fa fa-train" aria-hidden="true"></i> Train</button>
+      </div>
+      <button type="button" class="btn btn-danger" onclick="ResetAll()"><i class="fa fa-eraser" aria-hidden="true"></i> Erase all</button>
+      <button type="button" class="btn btn-success" onclick="SaveData()"><i class="fa fa-floppy-o" aria-hidden="true"></i> Save routes</button>
+    </div>
+  </div>
+</div>
+
+
 <input id="searchbox" class="controls" type="text" placeholder="Search Box">
 <!--Modal Window -->
     <div class="modal fade" id="myModal" role="dialog">
@@ -58,21 +73,6 @@
       </div>
     </div>
   </div>
-<div class="container-fluid">
-  <table class="table-responsive">
-    <table class="table">
-      <tbody>
-      <tr>
-        <td><button type="button" class="btn btn-primary" onclick="airplanehandler()">Airplane</button></td>
-        <td><button type="button" class="btn btn-primary" onclick="bushandler()">Bus</button></td>
-        <td><button type="button" class="btn btn-primary" onclick="trainhandler()">Train</button></td>
-        <td><button type="button" class="btn btn-primary" onclick="ResetAll()">Reset All</button></td>
-        <td><button type="button" class="btn btn-primary" onclick="SaveData()">Save Data</button></td>
-      </tr>
-      </tbody>
-    </table>
-  </table>
-</div>
 
 <!-- Options Modal -->
 <div id="optionsmodal" class="modal fade" role="dialog">
