--- a/public/FrontEnd/css/main.css
+++ b/public/FrontEnd/css/main.css
@@ -15,6 +15,10 @@ nav {
 }
 */
 
+.imageholder { /* clicking on map markers on the edit map page */
+  max-width: 100%;
+}
+
 #googlemapcontainer{
   padding-top: 20px;
   padding-bottom: 20px;
