--- a/public/FrontEnd/css/main.css
+++ b/public/FrontEnd/css/main.css
@@ -8,6 +8,13 @@ nav {
   margin-top: 15px;
 }
 
+h1 {
+  color: transparent;
+  background-image:url("/FrontEnd/Pictures/logo.png");
+  width: 259px;
+  height: 50px;
+}
+
 /*
 .navbar-inverse {
   background-image:url("/FrontEnd/Pictures/subtle_carbon.png");
