--- a/public/FrontEnd/partials/dashboard.html
+++ b/public/FrontEnd/partials/dashboard.html
@@ -24,7 +24,7 @@
 </nav>
 -->
 
-<h1>(TripAround logo)</h1>
+<h1>TripAround</h1>
 <h3>Welcome, {{userid}}</h3>
 <div class="row steps">
   <div class="col-md-3 step step-current">
