--- a/public/FrontEnd/partials/imagegallery.html
+++ b/public/FrontEnd/partials/imagegallery.html
@@ -64,10 +64,10 @@
       <div class="modal-body">
         <form id="filterform">
           <div class="checkbox">
-            <label><input type="checkbox" id="smilecheck" value=""> Check for smiles</label>
+            <label><input type="checkbox" id="facecheck" value=""> Check for face</label>
           </div>
           <div class="checkbox">
-            <label><input type="checkbox" id="facecheck" value="" disabled> Check for face</label>
+            <label><input type="checkbox" id="smilecheck" value="" disabled> Check for smiles</label>
           </div>
         </form>
       </div>
