--- a/public/FrontEnd/partials/map.html
+++ b/public/FrontEnd/partials/map.html
@@ -59,7 +59,9 @@
       </div>
       <div class="modal-body">
         <div id="image-des"></div>
-       <div id="image-container"></div>
+       <img id="image-container">
+
+       </div>
         <form id="imagedescription">
           <input type="text" placeholder="Enter Description" id="imageinfo">
         </form>
