childish font for steps

--- a/public/FrontEnd/css/main.css
+++ b/public/FrontEnd/css/main.css
@@ -52,6 +52,8 @@ h1 {
   border-bottom-width: 4px;
   border-bottom-style: solid;
   font-weight: bold;
+  font-family: 'Indie Flower', cursive;
+  font-size: 120%;
 }
 .step::after {
   content: "";
