--- a/public/FrontEnd/partials/dashboard.html
+++ b/public/FrontEnd/partials/dashboard.html
@@ -28,7 +28,7 @@
 <h3>Welcome, {{userid}}</h3>
 <div class="row steps">
   <div class="col-md-3 step step-current">
-    <a>1. Create or choose a map.</a>
+    <a>1. Select a map.</a>
   </div>
   <div class="col-md-3 step step-future">
     <a>2. Upload pictures.</a>
