--- a/public/FrontEnd/partials/imagegallery.html
+++ b/public/FrontEnd/partials/imagegallery.html
@@ -3,7 +3,7 @@
 <h3>Welcome, {{userid}}</h3>
 <div class="row steps">
   <div class="col-md-3 step step-past">
-    <a href="#dashboard">1. Create or choose a map.</a>
+    <a href="#dashboard">1. Select a map.</a>
   </div>
   <div class="col-md-3 step step-past">
     <a href="#UploadImages">2. Upload pictures.</a>
