--- a/public/FrontEnd/partials/imageupload.html
+++ b/public/FrontEnd/partials/imageupload.html
@@ -4,7 +4,7 @@
 <h3>Welcome, {{userid}}</h3>
 <div class="row steps">
   <div class="col-md-3 step step-past">
-    <a href="#dashboard">1. Create or choose a map.</a>
+    <a href="#dashboard">1. Select a map.</a>
   </div>
   <div class="col-md-3 step step-current">
     <a>2. Upload pictures.</a>
