--- a/public/FrontEnd/partials/imagegallery.html
+++ b/public/FrontEnd/partials/imagegallery.html
@@ -69,6 +69,9 @@
           <div class="checkbox">
             <label><input type="checkbox" id="smilecheck" value="" disabled> Check for smiles</label>
           </div>
+          <div class="checkbox">
+            <label><input type="checkbox" id="dispall" value="">Display all Images</label>
+          </div>
         </form>
       </div>
       <div class="modal-footer">
