image gallery fix

--- a/public/FrontEnd/partials/imageupload.html
+++ b/public/FrontEnd/partials/imageupload.html
@@ -18,7 +18,7 @@
 </div>
 <div class="row">
   <div class="col-lg-12">
-    
+
   </div>
 </div>
 <div class="row">
@@ -76,6 +76,30 @@
       <div class="col-lg-12">
         <div id="googleMap"></div>
       </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="myModal" role="dialog">
+  <div class="modal-dialog">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Tagged Image</h4>
+      </div>
+      <div class="modal-body">
+        <div id="image-des"></div>
+        <img id="image-container">
+
+      </div>
+      <form id="imagedescription">
+        <input type="text" placeholder="Enter Description" id="imageinfo">
+      </form>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      <button type="button" class="btn btn-success" id="imagedescriptionsub">Save</button>
     </div>
   </div>
 </div>
