--- a/public/FrontEnd/partials/imagegallery.html
+++ b/public/FrontEnd/partials/imagegallery.html
@@ -26,12 +26,12 @@
 
 <div class="row" id="imagegall">
 </div>
-
+<!--
 <div class="row">
   <div class="col-lg-12">
     <button class="btn btn-primary btn-lg" id="filters">Apply filters</button>
   </div>
-</div>
+</div> -->
 
 <!-- old gallery implementations
 
